@@ -80,6 +80,12 @@ enum mpd_idle {
 
 	/** a sticker has been modified. */
 	MPD_IDLE_STICKER = 0x100,
+
+	/** a client has subscribed or unsubscribed to/from a channel */
+	MPD_IDLE_SUBSCRIPTION = 0x200,
+
+	/** a message on the subscribed channel was receivedd */
+	MPD_IDLE_MESSAGE = 0x400,
 };
 
 #ifdef __cplusplus
